--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -2,15 +2,13 @@
 <html>
 
 <head>
-    <title>Redux Start Template</title>
+    <title>React Starter Template</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css" rel="stylesheet" integrity="sha384-HzUaiJdCTIY/RL2vDPRGdEQHHahjzwoJJzGUkYjHVzTwXFQ2QN/nVgX7tzoMW3Ov" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="client"></div>
 </body>
 
 </html>
